--- a/index.html
+++ b/index.html
@@ -6,11 +6,35 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/architects.css">
 </head>
-<body class="work sans font">
-    <header>
-        <nav class="navbar">
+<body class="work-sans-font">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
+            <ul class = "nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-dark-2">
+                    Home
+                </a></li>
+                <li class="nav-item "><a href="" class="nav-link text-dark-2">
+                    About
+                </a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark-2">
+                    Contact Us
+                </a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark-2">
+                    Login
+                </a></li>
+            </ul>
         </nav>
+        <div class="banner">
+           <div class="banner-content">
+            <h1 class="banner-title">Brand New Group of Architects</h1>
+            <p class="banner-description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque quidem, possimus officia blanditiis aspernatur, iusto aut debitis, vero vel cupiditate expedita dolore at tempore velit a! Repudiandae asperiores nam possimus!
+            </p>
+            <button class="primary-btn">Explore More</button>
+           </div>
+            <img class = "banner-image" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
