--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
         </div>
     </header>
     <main>
+        <sections class="teams display-flex">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt=""><img src="images/team2.png" alt=""><img src="images/team3.png" alt=""><img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id = "quick-list" class="text-dark-3">Quick List</span> of Our <span class = "features text-primary">Features</span></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus beatae corrupti consequuntur tempore libero, corporis, dignissimos, expedita deserunt dolore maiores nihil porro. Officia natus doloremque sit nobis. Unde, voluptate!
+                </p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </sections>
+        <section>
+            <h3 class="feature-title">Some Facts</h3>
+            <p class="text-dark-3">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+        </section>
+
+        <section>
+
+        </section>
 
     </main>
     <footer>
