made fact cards

--- a/index.html
+++ b/index.html
@@ -1,58 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/architects.css">
 </head>
+
 <body class="work-sans-font">
     <header class="bg-light">
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
-            <ul class = "nav-links display-flex">
+            <ul class="nav-links display-flex">
                 <li class="nav-item"><a href="" class="nav-link text-dark-2">
-                    Home
-                </a></li>
+                        Home
+                    </a></li>
                 <li class="nav-item "><a href="" class="nav-link text-dark-2">
-                    About
-                </a></li>
+                        About
+                    </a></li>
                 <li class="nav-item"><a href="" class="nav-link text-dark-2">
-                    Contact Us
-                </a></li>
+                        Contact Us
+                    </a></li>
                 <li class="nav-item"><a href="" class="nav-link text-dark-2">
-                    Login
-                </a></li>
+                        Login
+                    </a></li>
             </ul>
         </nav>
         <div class="banner">
-           <div class="banner-content">
-            <h1 class="banner-title">Brand New Group of Architects</h1>
-            <p class="banner-description">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque quidem, possimus officia blanditiis aspernatur, iusto aut debitis, vero vel cupiditate expedita dolore at tempore velit a! Repudiandae asperiores nam possimus!
-            </p>
-            <button class="primary-btn">Explore More</button>
-           </div>
-            <img class = "banner-image" src="images/banner.png" alt="">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque quidem, possimus officia blanditiis
+                    aspernatur, iusto aut debitis, vero vel cupiditate expedita dolore at tempore velit a! Repudiandae
+                    asperiores nam possimus!
+                </p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+            <img class="banner-image" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
         <sections class="teams display-flex">
             <div class="team-image-container">
-                <img src="images/team1.png" alt=""><img src="images/team2.png" alt=""><img src="images/team3.png" alt=""><img src="images/team4.png" alt="">
+                <img src="images/team1.png" alt=""><img src="images/team2.png" alt=""><img src="images/team3.png"
+                    alt=""><img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h3 class="feature-title"><span id = "quick-list" class="text-dark-3">Quick List</span> of Our <span class = "features text-primary">Features</span></h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus beatae corrupti consequuntur tempore libero, corporis, dignissimos, expedita deserunt dolore maiores nihil porro. Officia natus doloremque sit nobis. Unde, voluptate!
+                <h3 class="feature-title"><span id="quick-list" class="text-dark-3">Quick List</span> of Our <span
+                        class="features text-primary">Features</span></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus beatae corrupti
+                    consequuntur tempore libero, corporis, dignissimos, expedita deserunt dolore maiores nihil porro.
+                    Officia natus doloremque sit nobis. Unde, voluptate!
                 </p>
                 <button class="primary-btn">Explore More</button>
             </div>
         </sections>
         <section>
             <h3 class="feature-title">Some Facts</h3>
-            <p class="text-dark-3">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            <p class="fact-description text-dark-3">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words which don't look even
             </p>
+            <div class="fact-container">
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Award Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients</h5>
+                    </div>
+                </div>
+                <div class="fact display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Sent</h5>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section>
@@ -64,4 +103,5 @@
 
     </footer>
 </body>
+
 </html>
