made fact and sponsors responsive

--- a/index.html
+++ b/index.html
@@ -94,8 +94,20 @@
             </div>
         </section>
 
-        <section>
-
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="feature-title">Our Sponsors</h3>
+                <p class="text-dark-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia ducimus
+                    deleniti error ipsam dicta quis incidunt illum laborum quos accusamus reiciendis totam amet dolor
+                    voluptate vitae aut, obcaecati eius excepturi.</p>
+            </div>
+            <div class="companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
         </section>
 
     </main>
