made features, badge and made it responsive

--- a/index.html
+++ b/index.html
@@ -56,6 +56,41 @@
                 <button class="primary-btn">Explore More</button>
             </div>
         </sections>
+
+        <section class="features-you-love">
+            <div>
+                <h3 id= "feature-section-title" class="feature-title">Features You will <br> Love & Enjoy</h3>
+                <p class="text-dark-3">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt voluptatum nobis esse necessitatibus assumenda veniam molestiae recusandae laborum fuga vitae iste, quas fugiat, nam iusto corporis consectetur soluta rem praesentium.
+                </p>
+                <div class="feature-card">
+                    <h4 class="title">XYZ</h4>
+                    <p class="text-dark-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, repudiandae? Facilis ex consequuntur laborum perspiciatis accusamus! Quos, nemo rem. Eveniet est possimus corporis sit officia voluptate, odit itaque fuga quisquam?</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="title">XYZ</h4>
+                    <p class="text-dark-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, repudiandae? Facilis ex consequuntur laborum perspiciatis accusamus! Quos, nemo rem. Eveniet est possimus corporis sit officia voluptate, odit itaque fuga quisquam?</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="title">XYZ</h4>
+                    <p class="text-dark-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, repudiandae? Facilis ex consequuntur laborum perspiciatis accusamus! Quos, nemo rem. Eveniet est possimus corporis sit officia voluptate, odit itaque fuga quisquam?</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="title">XYZ</h4>
+                    <p class="text-dark-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, repudiandae? Facilis ex consequuntur laborum perspiciatis accusamus! Quos, nemo rem. Eveniet est possimus corporis sit officia voluptate, odit itaque fuga quisquam?</p>
+                </div>
+            </div>
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button class="primary-btn", id =  "badge">
+                    <span id = "experience-year">10+ Years</span>
+                    <br>
+                    <span>experience</span>
+                </button>
+            </div>
+        </section>
+        
+        
         <section>
             <h3 class="feature-title">Some Facts</h3>
             <p class="fact-description text-dark-3">
